# nook

./: README.md  index.html  package.json  pnpm-lock.yaml
.claude/: launch.json
docs/: app-definition.md
mcp-server/: .dxtignore  .gitignore  manifest.json  nook.mcpb  package.json  pnpm-lock.yaml  test-client.mjs
mcp-server/src/: index.ts
scripts/: gen-accents.mjs  make-latest-json.sh  release.sh
src/: App.tsx  accents.css  api.ts  main.tsx  styles.css  types.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: commands.rs  db.rs  files.rs  http.rs  images.rs  lib.rs  mcp.rs  migrate.rs  models.rs  reminders.rs  repo.rs  seed.rs
src-tauri/src/sync/: clock.rs  log.rs  merge.rs  mod.rs  net.rs  proto.rs  store.rs  tickets.rs
src/components/: AccentPicker.tsx  AddAppModal.tsx  AppBuilderPanel.tsx  AppView.tsx  BoardView.tsx  CalendarView.tsx  CellEditor.tsx  ChartView.tsx  CommandPalette.tsx  EmptyState.tsx  FieldInput.tsx  FieldValue.tsx  FilePicker.tsx  GalleryView.tsx  HeatmapView.tsx  ImagePicker.tsx  McpPanel.tsx  Menu.tsx  NewAppModal.tsx  PageView.tsx  RecordModal.tsx  SettingsModal.tsx  ShareModal.tsx  Sidebar.tsx  SummaryView.tsx  TableView.tsx  ThemeToggle.tsx  Toast.tsx  UpdateBanner.tsx  ViewBody.tsx  icons.tsx  primitives.tsx  relations.tsx
src/lib/: accent.ts  blocks.ts  files.ts  format.ts  images.ts  metric.ts  palette.ts
