[package]
name = "nook"
version = "0.1.0"
description = "Nook — a personal, local-first app builder you make with Claude"
authors = ["you"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
# The `_lib` suffix may seem redundant but it is necessary
# to make the lib name unique and wouldn't conflict with the bin name.
# This seems to be only an issue on Windows, see https://github.com/rust-lang/cargo/issues/8519
name = "nook_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
# `protocol-asset` serves local files (picked images) to the webview via asset://.
tauri = { version = "2", features = ["protocol-asset"] }
tauri-plugin-opener = "2"
# Native file-picker dialog for the image field.
tauri-plugin-dialog = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
# `bundled` compiles a recent SQLite from source (JSON functions + generated
# columns), so the app doesn't depend on the system SQLite version.
rusqlite = { version = "0.32", features = ["bundled"] }
anyhow = "1"
# Minimal synchronous HTTP server for the localhost-only API the MCP server calls.
tiny_http = "0.12"
