[package]
name = "nook"
version = "0.5.2"
description = "Nook — a personal, local-first app builder you make with Claude"
authors = ["you"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
# The `_lib` suffix may seem redundant but it is necessary
# to make the lib name unique and wouldn't conflict with the bin name.
# This seems to be only an issue on Windows, see https://github.com/rust-lang/cargo/issues/8519
name = "nook_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
# `protocol-asset` serves local files (picked images) to the webview via asset://.
tauri = { version = "2", features = ["macos-private-api", "protocol-asset"] }
tauri-plugin-opener = "2"
# Native file-picker dialog for the image field.
tauri-plugin-dialog = "2"
# OS notifications for date-field reminders.
tauri-plugin-notification = "2"
# Self-update from GitHub Releases. Signed with a Tauri minisign key — separate
# from, and independent of, Apple code signing.
tauri-plugin-updater = "2"
# `relaunch()` the app once an update has been installed.
tauri-plugin-process = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
# `bundled` compiles a recent SQLite from source (JSON functions + generated
# columns), so the app doesn't depend on the system SQLite version.
rusqlite = { version = "0.32", features = ["bundled"] }
anyhow = "1"
# Record ids: globally-unique, time-ordered, so two databases can ever merge
# (P2P sync). The timestamp prefix keeps `ORDER BY created_at, id` stable.
ulid = "1"
# Device ids and share secrets for P2P sync.
rand = "0.8"
# Minimal synchronous HTTP server for the localhost-only API the MCP server calls.
tiny_http = "0.12"
# Frosted-glass sidebar (macOS NSVisualEffect) for a native window look.
window-vibrancy = "0.5"
iroh = "1.0.2"
iroh-gossip = "0.101.0"
blake3 = "1.8.5"
data-encoding = "2.11.0"
tokio = { version = "1.52.3", features = ["rt-multi-thread", "sync", "time", "macros"] }
n0-future = "0.3.2"
